<resources>
    <string name="app_name">TripleAtt</string>

    <string name="access_token">pk.eyJ1IjoiYWRpdHlhZGFsd2FkaTE1MTAiLCJhIjoiY2tiMzRoaXRrMDB5ZzJxbnZidnBqaW55eiJ9.Zz_vnt20S8NQj2SIwTYvIQ</string>
    <string name="dashboard">Dashboard</string>
    <string name="myProduct">My Product</string>
    <string name="myOrder">My Order</string>
    <string name="myEarning">My Sell</string>
    <string name="shopProfile">Shop Profile</string>
    <string name="setting">Setting</string>
    <string name="myCart">My Cart</string>
    <string name="myFavourite">My Favourite</string>
    <string name="myAccount">My Account</string>
    <string name="notificationSetting">Notification Setting</string>
    <string name="helpCenter">Help Center</string>
    <string name="legal">Legal</string>
    <string name="referEarn"><![CDATA[Refer & Earn]]></string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string-array name="spn_product_type">
        <item>Choose product category?*</item>
        <item>Grocery</item>
        <item>Stationary</item>
        <item>Fast Food</item>
    </string-array>
    <string-array name="spn_product_unit">
        <item>K.G.</item>
        <item>Liter</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_out_generate_bill"><![CDATA[Check Out & Generate Bill]]></string>

    <string name="Email"><u>abc@xyz.com</u></string>
    <string name="location"><u>Choose location*</u></string>
    <string-array name="spn_vehicle_type">
        <item>! Which type of vehicle you have?*</item>
        <item>Bike</item>
        <item>Activa</item>
        <item>Tempo</item>
        <item>Riksha</item>
        <item>Truck</item>
    </string-array>
    <string-array name="spn_shop_type">
        <item>Choose shop category?*</item>
        <item>Grocery</item>
        <item>Stationary</item>
        <item>Fast Food</item>
    </string-array>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="openLocationSettings">Open Location Setting</string>
    <string name="gpsNetworkNotEnabled">GPS Not Active</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_text">Don\'t have an account? <font fgcolor='#0190ff'>Signup</font></string>


    <string name="enter_your_name">Enter Your Name<font fgcolor='#fc2403'>*</font></string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number<font fgcolor='#fc2403'>*</font></string>
    <string name="enter_password">Enter Password<font fgcolor='#fc2403'>*</font></string>
    <string name="re_enter_password">Re enter Password<font fgcolor='#fc2403'>*</font></string>
    <string name="enter_your_driving_license_number"><font fgcolor='#03d3fc'>!!</font>Enter Your Driving License Number<font fgcolor='#fc2403'>*</font></string>
    <string name="enter_your_vehicle_number"><font fgcolor='#03d3fc'>!!!</font>Enter Your Vehicle Number<font fgcolor='#fc2403'>*</font></string>
    <string name="types_of_vehicle"><font fgcolor='#03d3fc'>!</font>Which types of vehicle you have?<font fgcolor='#fc2403'>*</font></string>
    <string name="enter_your_aadhar_id">Enter Your Aadhar ID<font fgcolor='#fc2403'>*</font></string>
    <string name="enter_shop_name">Enter Shop Name<font fgcolor='#fc2403'>*</font></string>
    <string name="enter_pincode">Enter PinCode<font fgcolor='#fc2403'>*</font></string>
    <string name="choose_location"><u>Choose Location*</u></string>
    <string name="upload_front_image_of_shop">Upload Front image of shop<font fgcolor='#fc2403'>*</font></string>
    <string name="choose_shop_category">Choose Shop Category<font fgcolor='#fc2403'>*</font></string>
    <string name="i_have_read_and_agree_with_the_terms_and_conditions">I have read and agree with the <font fgcolor='#4ab1ff'>Terms and Conditions</font></string>
    <string name="myBills">My Bills</string>
</resources>
